[gd_scene load_steps=13 format=3 uid="uid://bhxrfxl1y1xdq"]

[ext_resource type="Script" uid="uid://ccp4rutk43hj6" path="res://Scripts/UI/pause_menu.gd" id="1_pr555"]
[ext_resource type="Texture2D" uid="uid://c3txmui8m2di6" path="res://Assets/Backgrounds/tentative backg.png" id="2_8dpcc"]
[ext_resource type="FontFile" uid="uid://dwrfjr0f0fujg" path="res://Assets/UI/5x3-font.ttf" id="3_qjk66"]
[ext_resource type="Texture2D" uid="uid://ddmu0fky1k5qq" path="res://Assets/Sensors/lightsensor.png" id="4_1yf2f"]
[ext_resource type="Texture2D" uid="uid://cosxd33s3hx08" path="res://Assets/Interactables/buttonhover.png" id="5_rqg0w"]
[ext_resource type="Texture2D" uid="uid://d2660infndgfa" path="res://Assets/Sensors/soundsensor.png" id="6_lsyt1"]
[ext_resource type="PackedScene" uid="uid://cmg3ayhqc4hdy" path="res://Scenes/UI/death_coutner.tscn" id="7_1yf2f"]
[ext_resource type="PackedScene" uid="uid://cersl1fr0sii5" path="res://Scenes/UI/speedrun_timer.tscn" id="7_8dpcc"]
[ext_resource type="PackedScene" uid="uid://dyefr0parhhbo" path="res://Scenes/UI/feather_counter.tscn" id="8_j4q0y"]
[ext_resource type="PackedScene" uid="uid://bdi8xrpf24rrh" path="res://Scenes/UI/options_ui.tscn" id="8_qjk66"]
[ext_resource type="AudioStream" uid="uid://b2nf05it16fb0" path="res://Assets/AUDIO/UI Mouse Click.wav" id="11_lsyt1"]

[sub_resource type="Theme" id="Theme_r5twg"]

[node name="PauseUI" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pr555")

[node name="TentativeBackg" type="Sprite2D" parent="."]
position = Vector2(3.8146973e-06, -3.8146973e-06)
scale = Vector2(0.53333336, 0.4)
texture = ExtResource("2_8dpcc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -55.5
offset_right = 49.0
offset_bottom = 55.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TITLE" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8784314, 0.827451, 0.78431374, 1)
theme_override_fonts/font = ExtResource("3_qjk66")
theme_override_font_sizes/font_size = 14
text = "PAUSE"
horizontal_alignment = 1

[node name="RESUME" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_colors/font_color = Color(0.8784314, 0.827451, 0.78431374, 1)
theme_override_colors/font_focus_color = Color(0.98039216, 0.7490196, 0.38039216, 1)
theme_override_colors/font_pressed_color = Color(0.5411765, 0.34509805, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.98039216, 0.7490196, 0.38039216, 1)
theme_override_colors/font_hover_pressed_color = Color(0.5411765, 0.34509805, 0.39607844, 1)
theme_override_colors/font_outline_color = Color(0.27058825, 0.16862746, 0.24705882, 1)
theme_override_colors/icon_normal_color = Color(0.5019608, 0.47843137, 0.5019608, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_qjk66")
theme_override_font_sizes/font_size = 7
theme_override_icons/icon = ExtResource("4_1yf2f")
button_mask = 5
text = "  RESUME"
alignment = 0

[node name="OPTIONS" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_r5twg")
theme_override_colors/font_color = Color(0.8784314, 0.827451, 0.78431374, 1)
theme_override_colors/font_focus_color = Color(0.98039216, 0.7490196, 0.38039216, 1)
theme_override_colors/font_pressed_color = Color(0.5411765, 0.34509805, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.98039216, 0.7490196, 0.38039216, 1)
theme_override_colors/font_hover_pressed_color = Color(0.5411765, 0.34509805, 0.39607844, 1)
theme_override_colors/font_outline_color = Color(0.27058825, 0.16862746, 0.24705882, 1)
theme_override_colors/icon_normal_color = Color(0.5019608, 0.47843137, 0.5019608, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_qjk66")
theme_override_font_sizes/font_size = 7
theme_override_icons/icon = ExtResource("5_rqg0w")
text = "  OPTIONS"
alignment = 0

[node name="QUIT" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.8784314, 0.827451, 0.78431374, 1)
theme_override_colors/font_focus_color = Color(0.98039216, 0.7490196, 0.38039216, 1)
theme_override_colors/font_pressed_color = Color(0.5411765, 0.34509805, 0.39607844, 1)
theme_override_colors/font_hover_color = Color(0.98039216, 0.7490196, 0.38039216, 1)
theme_override_colors/font_hover_pressed_color = Color(0.5411765, 0.34509805, 0.39607844, 1)
theme_override_colors/font_outline_color = Color(0.27058825, 0.16862746, 0.24705882, 1)
theme_override_colors/icon_normal_color = Color(0.5004912, 0.47686583, 0.5004912, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_qjk66")
theme_override_font_sizes/font_size = 7
theme_override_icons/icon = ExtResource("6_lsyt1")
text = "  QUIT TO TITLE"
alignment = 0
text_overrun_behavior = 1

[node name="DeathCoutner" parent="." instance=ExtResource("7_1yf2f")]
layout_mode = 1
offset_left = -80.0
offset_top = -60.0
offset_right = -80.0
offset_bottom = -60.0

[node name="FeatherCounter" parent="." instance=ExtResource("8_j4q0y")]
layout_mode = 1
offset_left = 59.0
offset_top = 46.0
offset_right = 59.0
offset_bottom = 46.0

[node name="SpeedrunTimer" parent="." instance=ExtResource("7_8dpcc")]
layout_mode = 1
offset_left = -80.0
offset_top = -60.0
offset_right = -80.0
offset_bottom = -60.0

[node name="OptionsUI" parent="." instance=ExtResource("8_qjk66")]
visible = false
layout_mode = 1

[node name="UiMouseClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_lsyt1")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/RESUME" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OPTIONS" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
